--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
     "name": "vico-logger",
-    "version": "1.0.0",
+    "version": "1.1.0",
+    "type": "module",
     "description": "Winston-based logger with daily rotate and Discord alert",
     "main": "index.js",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts",
     "author": "Asep Indra Kurniawan",
     "license": "MIT",
+    "scripts": {
+        "build": "tsc"
+    },
+    "files": [
+        "dist"
+    ],
     "keywords": [
         "logger",
         "winston",
@@ -12,13 +21,14 @@
         "rotate",
         "nodejs"
     ],
-    "files": [
-        "index.js"
-    ],
     "dependencies": {
         "axios": "^1.7.0",
         "dotenv": "^16.0.0",
         "winston": "^3.10.0",
         "winston-daily-rotate-file": "^4.7.1"
+    },
+    "devDependencies": {
+        "@types/node": "^24.3.0",
+        "typescript": "^5.0.0"
     }
 }
