--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.1.1",
     "type": "module",
     "description": "Winston-based logger with daily rotate and Discord alert",
-    "main": "index.js",
+    "main": "dist/index.cjs",
     "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
     "author": "Asep Indra Kurniawan",
