--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "1.1.2",
     "type": "module",
     "description": "Winston-based logger with daily rotate and Discord alert",
-    "main": "dist/index.cjs",
-    "module": "dist/index.mjs",
+    "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "author": "Asep Indra Kurniawan",
     "license": "MIT",
