--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
     "name": "vico-logger",
     "version": "1.1.4",
-    "type": "module",
-    "description": "Winston-based logger with daily rotate and Discord alert",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
     "author": "Asep Indra Kurniawan",
-    "license": "MIT",
-    "scripts": {
-        "build": "tsc"
-    },
+    "description": "Winston-based logger with daily rotate and Discord alert",
+    "main": "dist/index.cjs",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts",
     "files": [
         "dist"
     ],
+    "scripts": {
+        "build": "tsup src/index.ts --format cjs,esm --dts"
+    },
     "keywords": [
         "logger",
         "winston",
@@ -28,6 +27,7 @@
     },
     "devDependencies": {
         "@types/node": "^24.3.0",
+        "tsup": "^8.5.0",
         "typescript": "^5.0.0"
     }
 }
