--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.1.5",
     "author": "Asep Indra Kurniawan",
     "description": "Winston-based logger with daily rotate and Discord alert",
-    "main": "dist/index.cjs",
+    "main": "dist/index.js",
     "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
     "files": [
