--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "dist"
     ],
     "scripts": {
-        "build": "tsup src/index.ts --format cjs,esm --dts"
+        "build": "tsup"
     },
     "keywords": [
         "logger",
