--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
         "@types/node": "^24.3.0",
         "tsup": "^8.5.0",
         "typescript": "^5.0.0"
-    }
+    },
+    "license": "MIT"
 }
