--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "scripts": {
         "build": "tsup",
-        "dev": "npx ts-node test/index.ts"
+        "test": "npx ts-node test/index.ts"
     },
     "repository": {
         "type": "git",
@@ -33,7 +33,6 @@
         "nodejs"
     ],
     "dependencies": {
-        "axios": "^1.7.0",
         "dotenv": "^16.0.0",
         "winston": "^3.10.0",
         "winston-daily-rotate-file": "^4.7.1"
